syntax = "proto3";

option java_multiple_files = false;
option java_package = "io.pixelsdb.pixels.daemon";
option java_outer_classname = "MonitorProto";

package monitor.proto;


service MonitorService {
  rpc CollectMetrics (stream MonitorRequest) returns (stream MonitorResponse);
  rpc CheckMetrics (CheckRequest) returns (CheckResponse);
}

message MonitorRequest {
  uint32 queryConcurrency = 1;
}

message MonitorResponse {
}

message CheckRequest {}

message CheckResponse {
  string alarm_message = 1;// todo
}

